[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]

[tool.pylint.format]
disable = "logging-fstring-interpolation"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.coverage.run]
source = ["libretime_api_client"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
