[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]

[tool.mypy]
allow_redefinition = true
disallow_incomplete_defs= true
disallow_untyped_calls= true
disallow_untyped_defs= true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
