[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]

[tool.mypy]
allow_redefinition = true
disallow_incomplete_defs= true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
