[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = ["libretime_worker"]

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.coverage.run]
source = ["libretime_worker"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
